--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="homepage">
         <nav class="header">
-            <div id="headerLogo"><img src="logo_new 1.svg"><span>works</span></div>
+            <div id="headerLogo"><img src="logo.svg"><span>works</span></div>
             <div class="headerLinks">Blog</div>
             <div class="headerLinks">Úlohy</div>
             <div class="headerLinks">Kalkulačka</div>
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div id="footer">
-        <div id="footerLogo"><img src=""><span>works</span></div>
+        <div id="footerLogo"><img src="logo.svg"><span>works</span></div>
         <div id="footerLinks">
             <div class="footerLink">Blog</div>
             <div class="footerLink">Úlohy</div>
