--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./header.css">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./footer.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 
 <body>
     <div id="homepage">
         <nav class="header">
-            <div id="headerLogo"><img src="logo.svg"><span>works</span></div>
+            <div id="headerLogo"><img src="./images/logo.svg"><span>works</span></div>
             <div class="headerLinks">Blog</div>
             <div class="headerLinks">Úlohy</div>
             <div class="headerLinks">Kalkulačka</div>
             <div id="headerProject">O projektu</div>
-            <img id="headerLanguage" src="">
+            <img id="headerLanguage" src="./images/czech_flag.png">
         </nav>
         <div class="title">
             <div id="slogan">Trénuj, uč se a ušetři čas!!</div>
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div id="footer">
-        <div id="footerLogo"><img src="logo.svg"><span>works</span></div>
+        <div id="footerLogo"><img src="./images/logo.svg"><span>works</span></div>
         <div id="footerLinks">
             <div class="footerLink">Blog</div>
             <div class="footerLink">Úlohy</div>
