header.css completed

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <div id="homepage">
-        <nav class="header">
-            <div id="headerLogo"><img src="./images/logo.svg"><span>works</span></div>
-            <div class="headerLinks">Blog</div>
-            <div class="headerLinks">Úlohy</div>
-            <div class="headerLinks">Kalkulačka</div>
-            <div id="headerProject">O projektu</div>
+        <nav id="header">
+            <div id="headerLogo"><img src="./images/logo_new.svg" height="50px"><span>works</span></div>
+            <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Blog</a>
+            <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Úlohy</a>
+            <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
+            <a id="headerProject" href="" target="_blank" style="text-decoration: none;">O projektu</a>
             <img id="headerLanguage" src="./images/czech_flag.png">
         </nav>
         <div class="title">
