--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -20,10 +20,12 @@
             <a id="headerProject" href="" target="_blank" style="text-decoration: none;">O projektu</a>
             <img id="headerLanguage" src="./images/czech_flag.png">
         </nav>
-        <div class="title">
-            <div id="slogan">Trénuj, uč se a ušetři čas!!</div>
-            <div id="subtitle">Chceš se více dozvědět o světě počítačových sítí, ale nevíš kde?</div>
-            <div id="titleButton">Zjistit více</div>
+        <div id="title">
+            <b id="slogan">Trénuj, uč se<br>
+                a ušetři čas!!
+            <div id="subtitle">Chceš se více dozvědět o světě<br>
+                počítačových sítí, ale nevíš kde?</div>
+            <div id="titleButton"><a href="" target="_blank" style="text-decoration: none;">Zjistit více</a></div>
         </div>
     </div>
     <div class="firstSection">
