--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -25,32 +25,34 @@
                 a ušetři čas!!
             <div id="subtitle">Chceš se více dozvědět o světě<br>
                 počítačových sítí, ale nevíš kde?</div>
-            <div id="titleButton"><a href="" target="_blank" style="text-decoration: none;">Zjistit více</a></div>
+            <a id="titleButton" href="" target="_blank" style="text-decoration: none;">Zjistit více</a>
         </div>
     </div>
-    <div class="firstSection">
-        <div id="firstSectionTitle">Kalkulačka</div>
-        <div id="firstSectionContent">Chceš jen ušetřit čas?<br>
-            Tak to jsi tady správně!<br>
-            Vyvinuli jsme pro tebe skvělou<br>
-            kalkulačku, s kterou ti to půjde<br>
-            jedna dvě!</div>
-        <div id="firstSectionButton">Kalkulačka</div>
-    </div>
-    <div class="secondSection">
-        <div id="secondSectionTitle">Již brzy spouštíme náš blog!</div>
-        <div id="secondSectionContent">Můžete se těšit na články o<br>
-            počítačových sítí i na rubriku o<br>
-            Cisco kurzech.</div>
-        <div id="secondSectionButton">Již brzy</div>
-    </div>
-    <div class="thirdSection">
-        <div id="thirdSectionTitle">Úlohy</div>
-        <div id="thirdSectionContent">Nejde ti IP adresace?<br>
-            Nevíš, co je to VLSM/FLSM?<br>
-            Nevěš hlavu, připravili jsme<br>
-            pro tebe řadu úloh k procvičení!</div>
-        <div id="thirdSectionButton">Začít počítat</div>
+    <div id="sections">
+        <div id="firstSection">
+            <div id="firstSectionTitle">Kalkulačka</div>
+            <div id="firstSectionContent">Chceš jen ušetřit čas?<br>
+                Tak to jsi tady správně!<br>
+                Vyvinuli jsme pro tebe skvělou<br>
+                kalkulačku, s kterou ti to půjde<br>
+                jedna dvě!</div>
+            <div id="firstSectionButton">Kalkulačka</div>
+        </div>
+        <div id="secondSection">
+            <div id="secondSectionTitle">Již brzy spouštíme náš blog!</div>
+            <div id="secondSectionContent">Můžete se těšit na články o<br>
+                počítačových sítí i na rubriku o<br>
+                Cisco kurzech.</div>
+            <div id="secondSectionButton">Již brzy</div>
+        </div>
+        <div id="thirdSection">
+            <div id="thirdSectionTitle">Úlohy</div>
+            <div id="thirdSectionContent">Nejde ti IP adresace?<br>
+                Nevíš, co je to VLSM/FLSM?<br>
+                Nevěš hlavu, připravili jsme<br>
+                pro tebe řadu úloh k procvičení!</div>
+            <div id="thirdSectionButton">Začít počítat</div>
+        </div>
     </div>
     <div id="aboutProjectSection" align="center">
         <h2 id="aboutProjectTitle">O projektu</h2>
