--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -71,6 +71,7 @@
             </svg>
             <div>
                 <h2 id="timelineContentDate">2024</h2>
+                <div id="timeLineSpliter"></div>
                 <ul id="timelineContentRecordTable">
                     <li>Duben 2024, vymýšlíme a spouštíme webovou stránku XTworks.com!</li>
                 </ul>
