dalsi drobne upravy

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -80,11 +80,11 @@
         </div>
     </div>
     <div id="footer">
-        <div id="footerLogo"><img src="./images/logo.svg"><span>works</span></div>
+        <div id="footerLogo"><img src="./images/logo_new.svg" height="50px"><span>works</span></div>
         <div id="footerLinks">
-            <div class="footerLink">Blog</div>
-            <div class="footerLink">Úlohy</div>
-            <div class="footerLink">Kalkulačka</div>
+            <div class="footerLink" align="center">Blog</div>
+            <div class="footerLink" align="center">Úlohy</div>
+            <div class="footerLink" align="center">Kalkulačka</div>
         </div>
         <div id="footerImages">
             <img class="footerImage" src="./images/discord-logo.svg">
@@ -92,7 +92,7 @@
         </div>
         <div id="footerBottoms">
             <div class="footerBottom"></div>
-            <div class="footerBottom">©2023</div>
+            <div class="footerBottom" align="center">©2023</div>
             <div class="footerBottom"></div>
         </div>
     </div>
