změna loga na odkaz

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="homepage">
         <nav id="header">
-            <div id="headerLogo"><img src="./images/logo_new.svg" height="50px"><span>works</span></div>
+            <a id="headerLogo" href="" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
             <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Blog</a>
             <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Úlohy</a>
             <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
