--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -80,15 +80,15 @@
         </div>
     </div>
     <div id="footer">
-        <div id="footerLogo"><img src="./images/logo_new.svg" height="50px"><span>works</span></div>
+        <a id="footerLogo" href="" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
         <div id="footerLinks">
             <div class="footerLink" align="center">Blog</div>
             <div class="footerLink" align="center">Úlohy</div>
             <div class="footerLink" align="center">Kalkulačka</div>
         </div>
         <div id="footerImages">
-            <img class="footerImage" src="./images/discord-logo.svg">
-            <img class="footerImage" src="./images/github-logo.svg">
+            <a id="footerImage" href="" style="text-decoration: none;"><img src="./images/discord-logo.svg" height="50px"></a>
+            <a id="footerImage" href="" style="text-decoration: none;"><img src="./images/github-logo.svg" height="50px"></a>
         </div>
         <div id="footerBottoms">
             <div class="footerBottom"></div>
