--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+
     <div id="homepage">
         <nav id="header">
             <a id="headerLogo" href="" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
@@ -86,18 +86,18 @@
     <div id="footer">
         <a id="footerLogo" href="" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
         <div id="footerLinks">
-            <div class="footerLink" align="center">Blog</div>
-            <div class="footerLink" align="center">Úlohy</div>
-            <div class="footerLink" align="center">Kalkulačka</div>
+            <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Blog</a>
+            <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Úlohy</a>
+            <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Kalkulačka</a>
         </div>
         <div id="footerImages">
-            <a id="footerImage" href="" style="text-decoration: none;"><img src="./images/discord-logo.svg" height="50px"></a>
-            <a id="footerImage" href="" style="text-decoration: none;"><img src="./images/github-logo.svg" height="50px"></a>
+            <a id="footerImage1" href="" style="text-decoration: none;"><img src="./images/discord-logo.svg" height="50px"></a>
+            <a id="footerImage2" href="" style="text-decoration: none;"><img src="./images/github-logo.svg" height="60px"></a>
         </div>
         <div id="footerBottoms">
-            <div class="footerBottom"></div>
-            <div class="footerBottom" align="center">©2023</div>
-            <div class="footerBottom"></div>
+            <div id="footerBottomLeft"></div>
+            <div id="footerBottomDate" align="center">©2023</div>
+            <div id="footerBottomRight"></div>
         </div>
     </div>
 
