--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/section_animation.css">
     <link rel="icon" href="./images/logo_new.svg">
 </head>
 
@@ -27,13 +28,13 @@
                 a ušetři čas!!</div>
             <div id="subtitle">Chceš se více dozvědět o světě<br>
                 počítačových sítí, ale nevíš kde?</div>
-            <a id="titleButton" href="" target="_blank" style="text-decoration: none;">Zjistit více</a>
+            <a id="titleButton" href="#homepageMain" style="text-decoration: none;">Zjistit více</a>
         </div>
     </div>
 
     <div id="homepageMain">
         <div id="sections">
-            <div id="firstSection">
+            <div id="firstSection" class="sectionAnimation">
                 <div class="sectionTitle" id="firstSectionTitle">Kalkulačka</div>
                 <p class="sectionContent" id="firstSectionContent">Chceš jen ušetřit čas?<br>
                     Tak to jsi tady správně!<br>
@@ -42,7 +43,7 @@
                     jedna dvě!</p>
                 <a class="sectionButton" id="firstSectionButton" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
             </div>
-            <div id="secondSection">
+            <div id="secondSection" class="sectionAnimation">
                 <p class="sectionTitle" id="secondSectionTitle">Již brzy spouštíme<br>
                     náš blog!</p>
                 <div class="sectionContent" id="secondSectionContent">Můžete se těšit na články o<br>
@@ -50,7 +51,7 @@
                     Cisco kurzech.</div>
                 <p id="secondSectionButton">Již brzy...</p> 
             </div>
-            <div id="thirdSection">
+            <div id="thirdSection" class="sectionAnimation">
                 <div class="sectionTitle" id="thirdSectionTitle">Úlohy</div>
                 <div class="sectionContent" id="thirdSectionContent">Nejde ti IP adresace?<br>
                     Nevíš, co je to VLSM/FLSM?<br>
