--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/section_animation.css">
+    <link rel="stylesheet" href="./styles/aboutProject_animation.css">
     <link rel="icon" href="./images/logo_new.svg">
 </head>
 
@@ -19,7 +20,7 @@
             <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Blog</a>
             <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Úlohy</a>
             <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
-            <a id="headerProject" href="#aboutProjectSection" style="text-decoration: none;">O projektu</a>
+            <a id="headerProject" class="headerProjectAnimation" href="#aboutProjectSection" style="text-decoration: none;">O projektu</a>
             <img id="headerLanguage" src="./images/czech_flag.png">
         </nav>
         <div id="hiddenMessage">Tato webová stránka zatím nelze zobrazit v této velikosti.<br>Omlouváme se za případné komplikace.</div>
