--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/section_animation.css">
     <link rel="stylesheet" href="./styles/aboutProject_animation.css">
+    <link rel="stylesheet" href="./styles/button_animations.css">
     <link rel="icon" href="./images/logo_new.svg">
 </head>
 
@@ -29,7 +30,7 @@
                 a ušetři čas!!</div>
             <div id="subtitle">Chceš se více dozvědět o světě<br>
                 počítačových sítí, ale nevíš kde?</div>
-            <a id="titleButton" href="#homepageMain" style="text-decoration: none;">Zjistit více</a>
+            <a class="buttonAnimation" id="titleButton" href="#homepageMain" style="text-decoration: none;">Zjistit více</a>
         </div>
     </div>
 
@@ -42,7 +43,7 @@
                     Vyvinuli jsme pro tebe skvělou<br>
                     kalkulačku, s kterou ti to půjde<br>
                     jedna dvě!</p>
-                <a class="sectionButton" id="firstSectionButton" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
+                <a class="sectionButton buttonAnimation" id="firstSectionButton" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
             </div>
             <div id="secondSection" class="sectionAnimation">
                 <p class="sectionTitle" id="secondSectionTitle">Již brzy spouštíme<br>
@@ -58,7 +59,7 @@
                     Nevíš, co je to VLSM/FLSM?<br>
                     Nevěš hlavu, připravili jsme<br>
                     pro tebe řadu úloh k procvičení!</div>
-                <a class="sectionButton" id="thirdSectionButton" href="" target="_blank" style="text-decoration: none;">Začít počítat</a>
+                <a class="sectionButton buttonAnimation" id="thirdSectionButton" href="" target="_blank" style="text-decoration: none;">Začít počítat</a>
             </div>
         </div>
     
