--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -106,8 +106,8 @@
                 <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Kalkulačka</a>
             </div>
             <div id="footerImages">
-                <a id="footerImage1" href="" style="text-decoration: none;"><img src="./images/discord-logo.svg" height="50px"></a>
-                <a id="footerImage2" href="" style="text-decoration: none;"><img src="./images/github-logo.svg" height="60px"></a>
+                <a class="footerImage" href="" style="text-decoration: none;"><img src="./images/discord-logo.svg" height="50px"></a>
+                <a class="footerImage" href="" style="text-decoration: none;"><img src="./images/github-logo.svg" height="60px"></a>
             </div>
             
         </div>
