--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -24,7 +24,7 @@
                     <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
                 </div>
                 
-                <a id="headerProject" class="headerProjectAnimation" href="#aboutProjectSection" style="text-decoration: none;">O projektu</a>
+                <a id="headerProject" href="#aboutProjectSection" style="text-decoration: none;">O projektu</a>
                 <img id="headerLanguage" src="./images/czech_flag.png">
                 
             </div>
