--- a/kalkulacka/index.html
+++ b/kalkulacka/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <nav id="header">
-        <a id="headerLogo" href="" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
+        <a id="headerLogo" href="../Homepage/" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
         <div id="navbarLinks">
             <div id="navbarMainLinks">
-                <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Blog</a>
-                <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Úlohy</a>
-                <a class="headerLinks" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
+                <a class="headerLinks" href="" target="" style="text-decoration: none;">Blog</a>
+                <a class="headerLinks" href="../vyber_uloh/" target="_self" style="text-decoration: none;">Úlohy</a>
+                <a class="headerLinks" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
             </div>
             
-            <a id="headerProject" href="" style="text-decoration: none;">O projektu</a>
+            <a id="headerProject" href="../Homepage/#aboutProjectSection" target="_self" style="text-decoration: none;">O projektu</a>
             <img id="headerLanguage" src="./images/czech_flag.png">
             
         </div>
