--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -42,7 +42,7 @@
                     Vyvinuli jsme pro tebe skvělou<br>
                     kalkulačku, s kterou ti to půjde<br>
                     jedna dvě!</p>
-                <a class="sectionButton" id="firstSectionButton" href="" target="_blank" style="text-decoration: none;">Kalkulačka</a>
+                <a class="sectionButton" id="firstSectionButton" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
             </div>
             <div id="secondSection" class="sectionAnimation">
                 <p class="sectionTitle" id="secondSectionTitle">Již brzy spouštíme<br>
@@ -58,7 +58,7 @@
                     Nevíš, co je to VLSM/FLSM?<br>
                     Nevěš hlavu, připravili jsme<br>
                     pro tebe řadu úloh k procvičení!</div>
-                <a class="sectionButton" id="thirdSectionButton" href="" target="_blank" style="text-decoration: none;">Začít počítat</a>
+                <a class="sectionButton" id="thirdSectionButton" href="../vyber_uloh/" target="_self" style="text-decoration: none;">Začít počítat</a>
             </div>
         </div>
     
