záměna animací za transitions

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -35,7 +35,7 @@
     </div>
     <div id="homepageMain">
         <div id="sections">
-            <div id="firstSection" class="sectionAnimation">
+            <div class="section sectionAnimation">
                 <div class="sectionTitle" id="firstSectionTitle">Kalkulačka</div>
                 <p class="sectionContent" id="firstSectionContent">Chceš jen ušetřit čas?<br>
                     Tak to jsi tady správně!<br>
@@ -44,7 +44,7 @@
                     jedna dvě!</p>
                 <a class="sectionButton" id="firstSectionButton" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
             </div>
-            <div id="secondSection" class="sectionAnimation">
+            <div class="section sectionAnimation">
                 <p class="sectionTitle" id="secondSectionTitle">Již brzy spouštíme<br>
                     náš blog!</p>
                 <div class="sectionContent" id="secondSectionContent">Můžete se těšit na články o<br>
@@ -52,7 +52,7 @@
                     Cisco kurzech.</div>
                 <p id="secondSectionButton">Již brzy...</p> 
             </div>
-            <div id="thirdSection" class="sectionAnimation">
+            <div class="section sectionAnimation">
                 <div class="sectionTitle" id="thirdSectionTitle">Úlohy</div>
                 <div class="sectionContent" id="thirdSectionContent">Nejde ti IP adresace?<br>
                     Nevíš, co je to VLSM/FLSM?<br>
