--- a/vyber_uloh/index.html
+++ b/vyber_uloh/index.html
@@ -18,7 +18,7 @@
                 <a class="headerLinks" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
             </div>
             
-            <a id="headerProject" href="../Homepage/#aboutProjectSection" target="_self" style="text-decoration: none;">O projektu</a>
+            <a id="headerProject" href="../Homepage/#aboutProjectSection" style="text-decoration: none;">O projektu</a>
             <img id="headerLanguage" src="./images/czech_flag.png">
             
         </div>
